Add starter view filter features

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico"/>
-  <title>Site Name</title>
+  <title>machinLenin</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -29,12 +29,17 @@
   <!-- css own imports -->
   <link rel="stylesheet" href="css/colorTheme.css"/>
   <link rel="stylesheet" href="css/generalStyle.css"/>
+  <link rel="stylesheet" href="css/starter/starterStyle.css"/>
 
   <!-- OWN SCRIPTS -->
+  <!-- App states-->
+  <script src="app.js"></script>
+  <!-- services -->
+  <script src="javascript/services.js"></script>
   <!-- directives -->
   <script src="javascript/directives.js"></script>
   <!-- controllers -->
-  <script src="javascript/controllers/slideshowController.js"></script>
+  <script src="javascript/controllers/starterController.js"></script>
 </head>
 
 <body ng-app="machinLenin">
@@ -46,16 +51,16 @@
 <footer class="text-center">
 
     <div class="col-xs-4">
-      <img src="images/logoNegro.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
+      <img src="images/logo.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
     </div>
 
     <div class="col-xs-4">
       <p>© 2017
-        <a href="https://github.com/nebur395" target="_blank" class="w3-text-indigo w3-hover-text-light-blue">
+        <a href="https://github.com/nebur395/uCode17" target="_blank">
           Team Machin Lenin <i class="fa fa-github"></i></a></p>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-xs-4 text-right">
       <p>¡Hazte una cuenta PRO!</p>
     </div>
 
