Modify css minor problems

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
 <ui-view></ui-view>
 
 <!-- Footer -->
-<footer class="text-center">
+<footer class="text-center mL-text-small">
 
     <div class="col-xs-4">
       <img src="images/logo.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
