Delete fucking machin lenin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,6 +26,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 
+  <!-- ng-file-upload library -->
+  <script src="node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js"></script> <!-- for no html5 browsers support -->
+  <script src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
+
   <!-- css own imports -->
   <link rel="stylesheet" href="css/colorTheme.css"/>
   <link rel="stylesheet" href="css/generalStyle.css"/>
@@ -48,7 +52,7 @@
 <ui-view></ui-view>
 
 <!-- Footer -->
-<footer class="text-center mL-text-small">
+<footer class="text-center mL-text-small w3-theme-d3">
 
     <div class="col-xs-4">
       <img src="images/logo.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
@@ -56,7 +60,7 @@
 
     <div class="col-xs-4">
       <p>© 2017
-        <a href="https://github.com/nebur395/uCode17" target="_blank">
+        <a href="https://github.com/nebur395/uCode17" target="_blank" class="w3-link">
           Team Machin Lenin <i class="fa fa-github"></i></a></p>
     </div>
 
