--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,9 @@
   <link rel="stylesheet" href="css/colorTheme.css"/>
   <link rel="stylesheet" href="css/generalStyle.css"/>
   <link rel="stylesheet" href="css/starter/starterStyle.css"/>
+  <link rel="stylesheet" href="css/starter/descriptionStyle.css"/>
+  <link rel="stylesheet" href="css/starter/filtersStyle.css"/>
+  <link rel="stylesheet" href="css/starter/learningStyle.css"/>
 
   <!-- OWN SCRIPTS -->
   <!-- App states-->
@@ -40,6 +43,9 @@
   <script src="javascript/directives.js"></script>
   <!-- controllers -->
   <script src="javascript/controllers/starterController.js"></script>
+  <script src="javascript/controllers/learningController.js"></script>
+  <script src="javascript/controllers/filtersController.js"></script>
+  <script src="javascript/controllers/descriptionController.js"></script>
 </head>
 
 <body ng-app="machinLenin">
