Add overflow scroll in analytics section

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -50,8 +50,12 @@
 
 <body ng-app="machinLenin">
 
+<div style="min-height: 100%;position:relative">
+
+<div  style="padding-bottom: 70px;padding: 2%">
 <!-- the content here will be the 'body page' and it will change dependending of the current state -->
 <ui-view></ui-view>
+</div>
 
 <!-- Footer -->
 <footer class="text-center mL-text-small w3-theme-d3">
@@ -71,5 +75,6 @@
     </div>
 
 </footer>
+</div>
 </body>
 </html>
