Add segmentation section and refactor learning to search section

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="css/starter/starterStyle.css"/>
   <link rel="stylesheet" href="css/starter/descriptionStyle.css"/>
   <link rel="stylesheet" href="css/starter/filtersStyle.css"/>
-  <link rel="stylesheet" href="css/starter/learningStyle.css"/>
+  <link rel="stylesheet" href="css/starter/searchStyle.css"/>
 
   <!-- OWN SCRIPTS -->
   <!-- App states-->
@@ -43,7 +43,7 @@
   <script src="javascript/directives.js"></script>
   <!-- controllers -->
   <script src="javascript/controllers/starterController.js"></script>
-  <script src="javascript/controllers/learningController.js"></script>
+  <script src="javascript/controllers/searchController.js"></script>
   <script src="javascript/controllers/filtersController.js"></script>
   <script src="javascript/controllers/descriptionController.js"></script>
 </head>
