--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,14 +64,10 @@
       <img src="images/logo.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-xs-offset-4 col-xs-4 text-right">
       <p>© 2017
         <a href="https://github.com/nebur395/uCode17" target="_blank" class="w3-link">
           Team Machin Lenin <i class="fa fa-github"></i></a></p>
-    </div>
-
-    <div class="col-xs-4 text-right">
-      <p>¡Hazte una cuenta PRO!</p>
     </div>
 
 </footer>
