--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico"/>
-  <title>machinLenin</title>
+  <title>REC&MAKE</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -58,7 +58,7 @@
 <footer class="text-center mL-text-small w3-theme-d3">
 
     <div class="col-xs-4">
-      <img src="images/logo.png" alt="onirianLogo" style="max-height: 24px;margin-right: 25px;float:left">
+      <img src="images/logo.png" style="max-height: 50px;margin-top: -20px;float:left">
     </div>
 
     <div class="col-xs-offset-4 col-xs-4 text-right">
